[package]
name = "oz"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] } # Argument parsing
configparser = "3.1.0"                               # Parser for ini files
flate2 = "1.1.2"                                     # Zlib compressor/decompressor
indexmap = "2.11.0"                                  # Map with insertion order
sha1 = "0.10.6"                                      # Hashing
